FrostWire 2.7.8 build 731
 - Fixes X Video Download issue where video file names were too long
 - Search fixes
 - EZTV search removed
 - Yify search removed
 - Updated Gradle to version 8.6
 - Updated Android Gradle plugin to 8.2.1 and 8.3.2
 - Updated Python integration with com.chaquo.python:gradle:15.0.1
 - Fixed null pointer exceptions in AbstractConfirmListDialog and TellurideCourierCallback
 - Improved null checks for miniPlayer and coverImage
 - Miscellaneous Play Store compliance enhancements
 - Python version updated to 3.12
 - Python: yt-dlp-2024.4.9

FrostWire 2.7.7 build 730
 - Subscription page improvements
 - Plus users with Google Play can also buy Ad-Removal subscription
 - com.google.android.material:material:1.11.0
 - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.22
 - androidx.exifinterface:exifinterface:1.3.7
 - com.applovin:applovin-sdk:12.1.0
 - com.applovin.mediation:unityads-adapter:4.9.2.1
 - python: yt_dlp 2023.12.30
 - dev: com.google.firebase:firebase-bom:32.7.0
 - dev: com.android.tools.build:gradle:8.2.0

FrostWire 2.7.4 build 724 - DEC/05/2023
 - com.android.billingclient:billing:6.1.0
 - androidx.browser:browser:1.7.0
 - com.android.tools.build:gradle:8.1.4

FrostWire 2.7.3 build 723 - OCT/17/2023
 - Fixed bug where Play Store Ad-removal subscriptions weren't updating locally.
 - com.google.code.gson:gson:2.10.1
 - com.google.gms:google-services:4.4.0
 - com.google.firebase:firebase-crashlytics-gradle:2.9.9
 - com.google.android.material:material:1.10.0
 - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.10
 - androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2
 - com.applovin:applovin-sdk:11.11.3
 - com.applovin.mediation:unityads-adapter:4.9.1.0
 - python: yt_dlp 2023.10.13
 - dev: gradle build script deprecation fixes, cleanup
 - dev: com.android.tools.build:gradle:8.1.2
 - dev: gradle-8.4-bin.zip
 - dev: com.google.firebase:firebase-bom:32.3.1

FrostWire 2.7.2 build 722 - AUG/19/2023
 - Google Play Billing Library 4.1.0 to 6.0.1 migration