@@ -1,19 +1,18 @@
 /*
- * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
- * Copyright (c) 2011-2015, FrostWire(R). All rights reserved.
+ * Created by Angel Leon (@gubatron), Alden Torres (aldenml), Marcelina Knitter
+ * Copyright (c) 2011-2024, FrostWire(R). All rights reserved.
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.frostwire.android.gui.views;
@@ -76,13 +75,7 @@ public class PromotionsView extends LinearLayout {
     }
 
     private void removeAds(List<Slide> slides) {
-        final Iterator<Slide> iterator = slides.iterator();
-        while (iterator.hasNext()) {
-            final Slide next = iterator.next();
-            if ((next.flags & Slide.IS_ADVERTISEMENT) == Slide.IS_ADVERTISEMENT) {
-                iterator.remove();
-            }
-        }
+        slides.removeIf(next -> (next.flags & Slide.IS_ADVERTISEMENT) == Slide.IS_ADVERTISEMENT);
     }
 
     @Override
@@ -102,16 +95,13 @@ public class PromotionsView extends LinearLayout {
                 return;
             }
             PromotionsAdapter promoAdapter = (PromotionsAdapter) gridview.getAdapter();
-            if ((Constants.IS_GOOGLE_PLAY_DISTRIBUTION || PlayStore.available()) && position == 0) {
+            if (Constants.IS_GOOGLE_PLAY_DISTRIBUTION && position == 0) {
                 promoAdapter.onSpecialOfferClick();
                 return;
             }
 
-            boolean inLandscapeMode = getResources().getConfiguration().orientation == Configuration.ORIENTATION_LANDSCAPE;
-
             // FROSTWIRE FEATURES VIEW
-            if (!inLandscapeMode && ((!Constants.IS_GOOGLE_PLAY_DISTRIBUTION && position == 0) ||
-                (Constants.IS_GOOGLE_PLAY_DISTRIBUTION && position == 1))) {
+            if (position == (Constants.IS_GOOGLE_PLAY_DISTRIBUTION ? 1 : 0)) {
                 promoAdapter.onAllFeaturedDownloadsClick("topHeader");
                 return;
             }
